--- a/custom_plugins/interface_laprf/manifest.json
+++ b/custom_plugins/interface_laprf/manifest.json
@@ -1,10 +1,10 @@
 {
-    "domain": "provider_laprf",
+    "domain": "interface_laprf",
     "name": "LapRF Interface",
     "author": "RotorHazard Team",
     "author_uri": "https://github.com/RotorHazard/RotorHazard/",
     "description": "Control and data connection to Orqa/ImmersionRC LapRF 8-way",
-    "documentation_uri": "https://github.com/RotorHazard/laprf-provider",
+    "documentation_uri": "https://github.com/RotorHazard/LapRF-Interface",
     "license": "RotorHazard",
     "license_uri": "https://github.com/RotorHazard/RotorHazard/blob/main/LICENSE",
     "version": "1.0.0-beta.1",
